# terminalPOS

./: .gitignore  CMakeLists.txt  inventory_and_frontend.hpp  logic.cpp  logic.hpp  main  main.cpp  struct.hpp  ui.cpp  ui.hpp
